<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".DetailsActiviteFragment">
    <androidx.cardview.widget.CardView
            style="@style/CardView.Background">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/nomActTxtViewDetAct"
                    style="@style/Widget.AppCompat.TextView.4"
                    android:id="@+id/detailAcTtitre"
                    app:layout_constraintBottom_toTopOf="@id/detailLogoAct"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView

                    android:src="@drawable/outils"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:scaleType="centerInside"
                    android:cropToPadding="true"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:id="@+id/detailLogoAct"
                    android:adjustViewBounds="true"
                    android:background="@drawable/round"
                    android:backgroundTint="@color/Vert_eau"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailAcTtitre"
                    app:layout_constraintBottom_toTopOf="@id/createurTxtDetailAct"
                    android:contentDescription="@string/detail_txt"/>
            <TextView
                    android:text="@string/createurTxtView"
                    style="@style/Widget.AppCompat.TextView.5"
                    android:id="@+id/createurTxtDetailAct"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailLogoAct"
                    app:layout_constraintBottom_toTopOf="@id/DescriptionDetailAct"
                    tools:ignore="MissingConstraints"/>
            <TextView
                    android:text="@string/descriptionTxtView"
                    style="@style/Widget.AppCompat.TextView.5"
                    android:id="@+id/DescriptionDetailAct"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/createurTxtDetailAct"
                    app:layout_constraintBottom_toTopOf="@id/participeBtnDetailAct"
                    tools:ignore="MissingConstraints"/>
            <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rejoindreAct_txt"
                    android:id="@+id/participeBtnDetailAct"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/favBtnDetailAct"
                    app:layout_constraintTop_toBottomOf="@id/DescriptionDetailAct"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Base.TextAppearance.MaterialComponents.Button.2"
                    android:layout_margin="20dp"
                    app:icon="@drawable/bulle"
                    app:iconGravity="textEnd"
                    app:iconPadding="10dp"
                    app:iconSize="@dimen/icon">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/iconTaille"
                    android:layout_height="@dimen/iconTaille"
                    android:id="@+id/favBtnDetailAct"
                    app:layout_constraintStart_toEndOf="@id/participeBtnDetailAct"
                    app:layout_constraintLeft_toRightOf="@id/detailAcTtitre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/DescriptionDetailAct"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.Material3.Button.Circular.3"
                    android:layout_margin="20dp"
                    app:icon="@drawable/favoris"
                    app:iconGravity="textEnd"
                    app:iconPadding="0sp"
                    app:iconSize="@dimen/icon" android:contentDescription="@string/btn_fav">
            </com.google.android.material.button.MaterialButton>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content" android:id="@+id/guideline"
                                                        app:layout_constraintGuide_begin="20dp"
                                                        android:orientation="vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>